Impossible to select camera while in camera view if its clipping start is set to higher values #62814

Closed
opened 2019-03-21 12:51:48 +01:00 by Martynas Žiemys · 17 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-21 00:58, hash: 0bbff8a711
Worked: 2.79b

Short description of error
It is impossible to select the camera while in its camera view(clicking on its border) if clipping start is set to higher values.
cameraUnselectable.gif

Exact steps for others to reproduce the error

  1. Enter camera view
  2. Select the camera
  3. Set camera Clip Start to 2m.
  4. Deselect all
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-21 00:58, hash: `0bbff8a711` Worked: 2.79b **Short description of error** It is impossible to select the camera while in its camera view(clicking on its border) if clipping start is set to higher values. ![cameraUnselectable.gif](https://archive.blender.org/developer/F6860403/cameraUnselectable.gif) **Exact steps for others to reproduce the error** 1. Enter camera view 2. Select the camera 3. Set camera Clip Start to 2m. 4. Deselect all

Added subscriber: @MartinZ

Added subscriber: @MartinZ

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can not reproduce this.

Please update to the latest nvidia drivers and retry.

I can not reproduce this. Please update to the latest nvidia drivers and retry.

Added subscriber: @petrikas.m

Added subscriber: @petrikas.m

Can confirm the same is present on:

System:
OS: MacOSX High Sierra 10.13.6
Graphics Card: GeForce GTX 1070, web driver 387.10.10.10.40.108 (Latest)

Blender Version
2.80 Beta, Build date 2019-03-20 22:53, hash: 9105e1d084

Can confirm the same is present on: **System:** OS: MacOSX High Sierra 10.13.6 Graphics Card: GeForce GTX 1070, web driver 387.10.10.10.40.108 (Latest) **Blender Version** 2.80 Beta, Build date 2019-03-20 22:53, hash: 9105e1d08467

Drivers are up to date(well, now they are anyway... version 419.35). I can reproduce this on two different PCs as well both with same GPU, with today's build as well as builds from few days back.

It's camera clipping settings you are testing, not viewport, right?

Drivers are up to date(well, now they are anyway... version 419.35). I can reproduce this on two different PCs as well both with same GPU, with today's build as well as builds from few days back. It's camera clipping settings you are testing, not viewport, right?
Clément Foucault was assigned by Sebastian Parborg 2019-03-21 13:20:40 +01:00

Added subscribers: @fclem, @mano-wii

Added subscribers: @fclem, @mano-wii

@mano-wii @fclem bug or not? Objects that are clipped will not be selectable.
(Which is logical, but perhaps we could exclude the camera from this?)

@mano-wii @fclem bug or not? Objects that are clipped will not be selectable. (Which is logical, but perhaps we could exclude the camera from this?)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Cannot reproduce here on macOS 10.14 with integrated intel GPU.

Cannot reproduce here on macOS 10.14 with integrated intel GPU.

It works in 2.79 as it should. I don't see how this can be considered not to be a bug. Camera clipping itself should be considered a bug. There are no cases where one would need to clip a camera they are viewing things from with itself. If the safe areas and passepartout is visible, the camera border should remain visible as well.

It works in 2.79 as it should. I don't see how this can be considered not to be a bug. Camera clipping itself should be considered a bug. There are no cases where one would need to clip a camera they are viewing things from with itself. If the safe areas and passepartout is visible, the camera border should remain visible as well.

I added a gif showing the problem to the original report. Blender is out of the box, factory settings loaded, drivers are now updated to the newest ones. Problem is definitely there.

I added a gif showing the problem to the original report. Blender is out of the box, factory settings loaded, drivers are now updated to the newest ones. Problem is definitely there.

Ah yes, I can reproduce it. I was adjusting the viewport clip start, not the camera clip start.

Ah yes, I *can* reproduce it. I was adjusting the viewport clip start, not the camera clip start.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This should fix the problem but it looks like use_clip logic is broken:

diff --git a/source/blender/draw/modes/object_mode.c b/source/blender/draw/modes/object_mode.c
index 6a4e459ef56..1af6a5fff5d 100644
--- a/source/blender/draw/modes/object_mode.c
+++ b/source/blender/draw/modes/object_mode.c
@@ -1850,7 +1850,7 @@ static void DRW_shgroup_camera(OBJECT_ShadingGroupList *sgl, Object *ob, ViewLay
 		scale[2] = 1.0f / len_v3(ob->obmat[2]);
 	}
 
-	BKE_camera_view_frame_ex(scene, cam, cam->drawsize, false, scale,
+	BKE_camera_view_frame_ex(scene, cam, cam->drawsize, look_through, scale,
 	                         asp, shift, &drawsize, vec);
 
 	/* Frame coords */
This should fix the problem but it looks like `use_clip` logic is broken: ``` diff --git a/source/blender/draw/modes/object_mode.c b/source/blender/draw/modes/object_mode.c index 6a4e459ef56..1af6a5fff5d 100644 --- a/source/blender/draw/modes/object_mode.c +++ b/source/blender/draw/modes/object_mode.c @@ -1850,7 +1850,7 @@ static void DRW_shgroup_camera(OBJECT_ShadingGroupList *sgl, Object *ob, ViewLay scale[2] = 1.0f / len_v3(ob->obmat[2]); } - BKE_camera_view_frame_ex(scene, cam, cam->drawsize, false, scale, + BKE_camera_view_frame_ex(scene, cam, cam->drawsize, look_through, scale, asp, shift, &drawsize, vec); /* Frame coords */ ```

This issue was referenced by 6e7e6832e8

This issue was referenced by 6e7e6832e878de3c0032420de97a45279ef31c1a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62814
No description provided.