Fix T62814: Camera frame invisible with large near-clip value