source/blender/draw/modes/object_mode.c
@@ -1853,6 +1853,21 @@ static void DRW_shgroup_camera(OBJECT_ShadingGroupList *sgl, Object *ob, ViewLay
 	BKE_camera_view_frame_ex(scene, cam, cam->drawsize, false, scale,
 	                         asp, shift, &drawsize, vec);
 
+	if (look_through) {
+		/* Ensure the frame isn't behind the near clipping plane, T62814. */
+		float fac = (cam->clip_start + 0.1f) / -vec[0][2];
+		if (fac > 1.0f) {
+			for (uint i = 0; i < 4; i++) {
+				if (rv3d->is_persp) {
+					mul_v3_fl(vec[i], fac);
+				}
+				else {
+					vec[i][2] *= fac;
+				}
+			}
+		}
+	}
+
 	/* Frame coords */
 	copy_v2_v2(cam->runtime.drw_corners[0][0], vec[0]);
 	copy_v2_v2(cam->runtime.drw_corners[0][1], vec[1]);
